环境变量助手工具优化